spec/error_immut.expected
spec/error_immut.kex:4:3: error: Cannot assign to immutable binding: x
spec/error_immut.kex:7:3: error: Cannot redeclare immutable binding: x
Aborted: fix type errors before running (use --no-check to skip).
